force-app/main/default/objects/Territory_Assignment__c/Territory_Assignment__c.object-meta.xml
<CustomObject>
    <description>This is the main object to be able to assign the territory to a user.</description>
    <label>Territory Assignment</label>
    <nameField>
        <displayFormat>TA-{0000}</displayFormat>
        <label>Territory Assignment Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Territory Assignments</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>