force-app/main/default/objects/Territory_Assignment__c/fields/Retail_Territory__c.field-meta.xml
<CustomField>
    <fullName>Retail_Territory__c</fullName>
    <label>Retail Territory</label>
    <referenceTo>Retail_Territory__c</referenceTo>
    <relationshipLabel>Territory Assignments</relationshipLabel>
    <relationshipName>Territory_Assignments</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>